TAMAYA-274 Using Configuration as main API entry point only.